manifests/monitoring/kibana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: monitoring
  labels:
    app: kibana
    component: ingress
  annotations:
    ingress.kubernetes.io/auth-secret: kibana-basic-auth
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-realm: "thisone"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: kibana.kube.thisone.rocks
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
        path: /
  tls:
  - secretName: kibana-tls
    hosts:
    - kibana.kube.thisone.rocks
